# yew.megzari.com

./: .gitignore  Cargo.toml  README.md  bootstrap.js  package.json  postcss.config.js  tailwind.config.js  webpack.config.js  wrangler.toml.example
.dependabot/: config.yml
css/: custom.css  fonts.css  nav.css  styles.css
src/: app.rs  lib.rs
src/components/: footer.rs  mod.rs  nav.rs  tag.rs
src/routes/: about.rs  blog.rs  home.rs  mod.rs  post.rs
static/: index.html  posts.yaml  projects.yaml  text-polyfill.min.js
static/posts/: nix_on_macos.md
