[package]
name = "megzari"
version = "0.1.0"
authors = ["Raphael megzari raphael@megzari.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.60"
web_logger = "0.2"
yew = { version = "0.16", features = ["web_sys"] }
yew-router = { version="0.13.0", features = ["web_sys"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]
