[package]
name = "megzari"
version = "0.1.0"
authors = ["Raphael megzari raphael@megzari.com"]
edition = "2018"
description = "personal website"
repository = "https://github.com/happysalada/yew.megzari.com"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = "1.0.114"
serde_derive = "1"
wasm-bindgen = "0.2.65"
web_logger = "0.2"
yew = { version = "0.17.2", features = ["web_sys", "yaml"] }
yew-router = { version="0.14.0", features = ["web_sys"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
anyhow = "1.0.31"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]
