[package]
name = "megzari"
version = "0.1.0"
authors = ["Raphael megzari raphael@megzari.com"]
edition = "2018"
description = "personal website"
repository = "https://github.com/happysalada/yew.megzari.com"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { version = "0.4.11", features = ["release_max_level_warn", "max_level_debug"] }
serde = "1.0.116"
serde_derive = "1.0.116"
wasm-bindgen = "0.2.68"
web_logger = "0.2.0"
yew = { version = "0.17.3", features = ["yaml"] }
yew-router = "0.14.0"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
anyhow = "1.0.32"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies.web-sys]
version = "0.3.45"
features = [
  'KeyboardEvent',
]
